add create module functionality

--- a/client/templates/Module/edit_module.html
+++ b/client/templates/Module/edit_module.html
@@ -61,7 +61,7 @@
 
                 <div class="text-center mt-3">
                     <button type="button" class="btn remove-pill w-100" onclick="removeSelectedExercises('{{ module.id }}')">
-                        🗑 Remove Selected Exercises
+                        Remove Selected Exercises
                     </button>
                 </div>
                 
@@ -127,7 +127,6 @@
             </div>
         </form>
     </div>
-
 
         </form>
     </div>
