--- a/client/templates/client/add_video.html
+++ b/client/templates/client/add_video.html
@@ -154,6 +154,6 @@
         </form>
 
 
-    <a href="{% url 'video_list' %}" class="back-btn"> Back to Video List</a>
+        <a href="{{ request.META.HTTP_REFERER }}" class="back-btn"> Back </a>
 </div>
 {% endblock %}
