--- a/users/templates/users/about.html
+++ b/users/templates/users/about.html
@@ -44,11 +44,11 @@
                 </p>
 
                 <p class="about_description"></p>
-                <span class="start_journey">Start your journey today! 🚀</span>
+                <span class="start_journey">Start your journey today!</span>
                 </p>
                 
 
-                <a href="{% url 'sign_up_step_1' %}" class="cta-button">Get Started!</a>
+                <a href="{% url 'sign_up_step_1' %}" class="orange-button">Get Started!</a>
             </div>
         </div>
     </div>
