--- a/users/static/users/css/contact_us_and_about.css
+++ b/users/static/users/css/contact_us_and_about.css
@@ -37,11 +37,11 @@
 
 .contact_left_title h2 {
     font-weight: 600;
-    color: #F24505;
+    color: #2b2320;
     font-size: 30px;
     margin-bottom: 10px;
     text-align: center;
-    padding-left: 50px;
+    padding-left: 130px;
 }
 
 .contact_inputs {
@@ -51,17 +51,17 @@
     outline: none;
     padding-left: 25px;
     font-weight: 500;
-    color: #F24505;
-    border-radius: 50px;
+    color: #2b2320;
+    border-radius: 25px;
     display: block;
     box-sizing: border-box;
 }
 
 textarea.contact_inputs {
-    height: 350px;
+    height: 300px;
     padding: 15px 25px;
     border: 2px solid #F24505;
-    border-radius: 20px;
+    border-radius: 25px;
     resize: both;
     box-sizing: border-box; 
     min-width: 600px;
@@ -70,9 +70,9 @@ textarea.contact_inputs {
 
 
 .contact_body input{
-    border-radius: 50px;
+    border-radius: 25px;
     background-color: white;
-    color: #F24505;
+    color: #2b2320;
     border: 2px solid #F24505; 
     width: 600px;
 }
@@ -81,24 +81,29 @@ textarea.contact_inputs {
 }
 
 .contact_left button {
-    width: 600px;
-    height: 50px;
-    background-color: rgb(255, 255, 180);
-    color: #F24505;
+    display: inline-block;
+    background: #F24505;
+    color: #ffffff;
+    font-size: 16px;
     font-weight: bold;
-    border: none;
-    border-radius: 50px;
+    padding: 10px 14px;
+    border-radius: 25px;
+    text-decoration: none;
     cursor: pointer;
-    transition: all 0.3s ease;
+    text-align: center;
+    transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+    border: 2px solid #F24505;
+    margin-top: auto;
+    width:600px;
 }
 
 .contact_left button:hover {
-    background-color: #F24505;
+    background: #D43802;
+    border-color: #D43802;
     color: white;
 }
 .contact_inputs::placeholder {
-
-    color: #F24505;
+    color: #2b2320;
 }
  
 .contact_right {
@@ -109,7 +114,7 @@ textarea.contact_inputs {
 }
 
 .contact_right img {
-    width: 70%;
+    width: 60%;
     max-width: 500px;
     height: auto;
     border-radius: 20px;
@@ -186,7 +191,7 @@ textarea.contact_inputs {
     font-size: 28px;
     text-transform: uppercase;
     font-weight: bold;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Manrope', sans-serif;
     margin-bottom: 20px;
     text-align: center;
     width: fit-content;
@@ -200,7 +205,7 @@ textarea.contact_inputs {
     background: #F24505;
     color: white;
     padding: 12px 25px;
-    border-radius: 5px;
+    border-radius: 25px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     letter-spacing: 1.2px;
     width: 100%;
