Refine get_started UI; Fix test cases, fix the update_profile logic.

--- a/users/templates/users/Profile/delete_account.html
+++ b/users/templates/users/Profile/delete_account.html
@@ -18,7 +18,7 @@
             {% csrf_token %}
             <button type="submit" class="delete-btn">Yes, delete my account</button>
         </form>
-        <a href="{% url 'show_profile' %}" class="cancel-btn">Cancel</a>
+        <a href="{% url 'profile' %}" class="cancel-btn">Cancel</a>
     </div>
 </div>
 
