--- a/users/static/users/css/exercise_detail.css
+++ b/users/static/users/css/exercise_detail.css
@@ -45,7 +45,7 @@ h2 {
 @media (max-width: 768px) {
     .col-md-6 {
         width: 100%;
-    }
+}}
 @import url('users/styles.css');
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&display=swap');
 
