--- a/users/static/users/css/profile_style.css
+++ b/users/static/users/css/profile_style.css
@@ -116,9 +116,18 @@ html, body {
     font-size: 16px;
     border: 1px solid #CCC;
     border-radius: 25px;
-    background-color: #fff;
+    background-color: #eaeaea79;
     box-sizing: border-box;
 }
+
+/* Hover effect for input fields like select fields */
+.profile-details input:hover,
+.profile-details textarea:hover {
+    border-color: #888;
+    background-color: #fff;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.15);
+}
+
 
 /* Dropdown styling */
 .profile-details select {
