--- a/users/templates/users/Profile/update_profile.html
+++ b/users/templates/users/Profile/update_profile.html
@@ -61,6 +61,21 @@
             </div>
 
             <div class="form-group">
+                <label>Current Password:</label>
+                <div class="password-wrapper">
+                    <input type="password" id="current_password" name="current_password" class="input-wrapper"
+                           placeholder="Enter current password">
+                    <i class="fa fa-eye password-toggle" data-target="current_password"></i>
+                </div>
+                {% if form.current_password.errors %}
+                    <ul class="errorlist">
+                        <li>{{ form.current_password.errors.0|safe }}</li>
+                    </ul>
+                {% endif %}
+            </div>
+            
+
+            <div class="form-group">
                 <label>New Password:</label>
                 <div class="password-wrapper">
                     <input type="password" id="new_password" name="new_password" class="input-wrapper"
@@ -177,7 +192,7 @@
             <div class="left-buttons">
                 <button type="submit" class="btn">Save Changes</button>
             </div>
-            <a href="{% url 'show_profile' %}" class="cancel-btn">Cancel</a>
+            <a href="{% url 'profile' %}" class="cancel-btn">Cancel</a>
         </div>
     </form>
 </div>
