--- a/client/templates/client/add_video.html
+++ b/client/templates/client/add_video.html
@@ -155,5 +155,7 @@
 
 
         <a href="{{ request.META.HTTP_REFERER }}" class="back-btn"> Back </a>
+        <a href="{% url 'video_list' %}" class="back-btn">Video List</a>
+
 </div>
 {% endblock %}
